# himena-stats

./: LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
src/himena_stats/: _lazy_import.py  consts.py
src/himena_stats/distributions/: __init__.py  _construct.py  _fit.py  _methods.py  _utils.py  _widget.py
src/himena_stats/io/: __init__.py  _serialize.py  core.py
src/himena_stats/test_tools/: __init__.py  _consts.py  _goodness.py  _multiple.py  _single.py  _utils.py
tests/: __init__.py  conftest.py  test_distributions.py  test_stats_testing.py
