[build-system]
requires = ["hatchling>=1.26.1"]
build-backend = "hatchling.build"

[project]
name = "himena-stats"
dynamic = ["version"]
description = "Statistical testing in himena."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
keywords = []
authors = [
  { name = "hanjinliu", email = "liuhanjin.sc@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "numpy>=2.0",
  "scipy>=1.10.0",
  "statsmodels>=0.13.0",
  "scikit-posthocs>=0.7.0",
]

[project.urls]
Documentation = "https://github.com/hanjinliu/himena-stats#readme"
Issues = "https://github.com/hanjinliu/himena-stats/issues"
Source = "https://github.com/hanjinliu/himena-stats"

[tool.hatch.version]
path = "src/himena_stats/__init__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/himena_stats tests}"

[tool.coverage.run]
source_pkgs = ["himena_stats", "tests"]
branch = true
parallel = true

[tool.coverage.paths]
himena_stats = ["src/himena_stats", "*/himena-stats/src/himena_stats"]
tests = ["tests", "*/himena-stats/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[project.entry-points."himena.plugin"]
"Statistical testing" = "himena_stats.test_tools"
"Statistical distributions" = "himena_stats.distributions"
